# civicsenitnal

./: .env.example  .gitignore  Dockerfile  GETTING_STARTED.md  README.md  RTSP_FIX_SUMMARY.md  RUNNING.md  WHERE_TO_SEE.md  alembic.ini  docker-compose.yml  init_db.py  pyproject.toml  quickstart.sh  requirements.txt  test_api.py  test_page.html  test_visual_detection.html
app/: config.py  dependencies.py  main.py
app/api/: alerts.py  detect.py  health.py  zones.py
app/db/: crud.py  database.py
app/models/: database.py  schemas.py
app/services/: auth_service.py  yolo_service.py  zone_service.py
civicsentinel-agent/: .env.example  PROJECT_STATUS.md  QUICKSTART.md  README.md  index.html  package.json
civicsentinel-agent/src/: App.tsx
civicsentinel-agent/src-tauri/: Cargo.toml  tauri.conf.json
civicsentinel-agent/src-tauri/capabilities/: default.json
civicsentinel-agent/src-tauri/src/: api.rs  camera.rs  main.rs
civicsentinel-agent/src/components/: Alerts.tsx  CameraDiscovery.tsx  CameraList.tsx  LiveCameraView.tsx  Settings.tsx  ZoneEditor.tsx
civicsentinel-agent/src/stores/: alertStore.ts  authStore.ts  cameraStore.ts  settingsStore.ts
detection-demo/: COMPLETE_DEMO_GUIDE.md  QUICKSTART.md  README.md  ZONE_DEMO_GUIDE.md  detect_video.py  detect_video_nogui.py  detect_with_zones.py  detect_with_zones_complete.py  run_complete_demo.sh  run_demo.sh  run_zone_demo.sh
tests/: test_auth.py  test_detect.py  test_zones.py
